src/App.css
#container {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  padding: 2em;
}

#chat-area {
  flex-grow: 1;
  background-color: rgb(77, 77, 77);
  padding: 4em 1.5em 0.5em 1.5em;
  overflow: auto;
  display: flex;
  flex-direction: column;
  row-gap: 10px;
}

.base-shadow {
  -webkit-box-shadow: -5px 5px 0px 0px rgba(0, 0, 0, 1);
  -moz-box-shadow: -5px 5px 0px 0px rgba(0, 0, 0, 1);
  box-shadow: -5px 5px 0px 0px rgba(0, 0, 0, 1);
}

#chat-input {
  width: 100%;
}

.func-button i {
  pointer-events: none;
}

.base-button {
  background-color: rgb(255, 255, 159);
  border: 2px solid white;
  color: black;
}

.base-button-active {
  background-color: rgb(0, 0, 0);
  border: 2px solid rgb(0, 0, 0);
  color: rgb(255, 255, 255);
}


.base-button:hover {
  background-color: white;
  color: black;
}

@media only screen and (max-width: 600px) {
  #container {
    padding: 1em;
  }

  #chat-area {
    padding: 4em 0.7em 0.5em 0.7em;
  }
}

